# fastapi-mcp-azure-oauth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.leeptech/: catalog-item.json
demo/weather_mcp_server/: README.md  requirements.txt  server.py  weather.py
src/fastapi_mcp_azure_oauth/: __init__.py  graph.py  models.py  router.py  validator.py
tests/: test_graph.py  test_router.py  test_validator.py
